# Portfolio_Resource

./: README.md  ResourceReadMe.md
01_FinTranslator/FinTranslator_code/: .gitignore  CMakeLists.txt  windeployqt.md
01_FinTranslator/FinTranslator_code/localization/: fin_en.ts  fin_ja.ts
01_FinTranslator/FinTranslator_code/resource/image/: image.qrc
01_FinTranslator/FinTranslator_code/resource/image/icon/: FinTranslator.rc
01_FinTranslator/FinTranslator_code/resource/theme/: theme.qrc
01_FinTranslator/FinTranslator_code/resource/theme/dark/: CommonStyle.qss  FinTranslatorMainWidget_Main.qss  PopupTranslateWidget_Main.qss  PopupTranslateWidget_PushButton.qss  PopupTranslateWidget_TextEdit.qss  SettingCard.qss  Settings.qss  SimpleTranslate_PushButton.qss  SimpleTranslate_TextEdit.qss  TextEditTranslate.qss
01_FinTranslator/FinTranslator_code/src/: FinConstants.cpp  FinTranslatorCore.cpp  FinTranslatorCore.h  FinTypes.cpp  FinTypes.h
01_FinTranslator/FinTranslator_code/src/EngineUnits/: TranslateUnit.cpp  TranslateUnit.h
01_FinTranslator/FinTranslator_code/src/EngineUnits/FinPoint/: FinPointTrUnit.cpp
01_FinTranslator/FinTranslator_code/src/EngineUnits/OpenAI/: OpenAiTrUnit.cpp  OpenAiTrUnit.h
01_FinTranslator/FinTranslator_code/src/Managers/: ConfigManager.cpp  ConfigManager.h  GlobalHotKeyManager.cpp  GlobalHotKeyManager.h  RunCopKey.cpp  RunCopKey.h  RunCopy_Impl_Linux.cpp  StyleManger.cpp  TranslateManager.cpp  TranslateManager.h
01_FinTranslator/FinTranslator_code/src/Settings/: EngineOptionWidget.cpp  EngineOptionWidget.h  EngineOptionWidget.ui  GeneralOptionWidget.cpp  GeneralOptionWidget.h  GeneralOptionWidget.ui  IOptionWidget.cpp  IOptionWidget.h  SettingsWidget.cpp  SettingsWidget.ui
01_FinTranslator/FinTranslator_code/src/SubWidgets/: CustomMenuTextEdit.cpp  CustomMenuTextEdit.h  FinToast.cpp  FinToast.h  FinToolTip.cpp  FinToolTip.h  KeySelectionList.h  LanguageSelector.cpp  LanguageSelector.h  LayoutTextEdit.h  SettingCard.cpp
01_FinTranslator/FinTranslator_code/src/Widgets/: FinTranslatorMainWidget.cpp  FinTranslatorMainWidget.h  FinTranslatorMainWidget.ui  IFinWidget.cpp  IFinWidget.h  ITranslateWidget.cpp  ITranslateWidget.h  PopupTranslateWidget.cpp  PopupTranslateWidget.h  PopupTranslateWidget.ui  SimpleTranslatePopup.cpp  SimpleTranslatePopup.h  SimpleTranslatePopup.ui  TextEditTranslateWidget.cpp  TextEditTranslateWidget.h  TextEditTranslateWidget.ui
02_kkumigi_Project/: .gitignore  kkumigi.sln.DotSettings  kkumigi.uproject
02_kkumigi_Project/Config/: DefaultEngine.ini  DefaultGame.ini
02_kkumigi_Project/Content/: GrassMaterial.uasset  PPM_StencilOutline.uasset
02_kkumigi_Project/HSLS/: Grass.ush
03_Omnibus_Project/Source/: OmnibusEditor.Target.cs
04_Enoch_Project/Data/: FreeLancerTemplateData.csv
05_Montis_Project/Config/: DefaultEngine.ini
05_Montis_Project/Source/: Montis.Target.cs
06_CitadelForever_Project/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini
06_CitadelForever_Project/Content/: BP_CitadelGameModeBase.uasset
07_Everymino_Project/: Everymino.uproject
07_Everymino_Project/Config/: DefaultInput.ini
07_Everymino_Project/Source/: Everymino.Target.cs  EveryminoEditor.Target.cs
08_FlatformLand_Project/Assets/: blockButton.cs
08_FlatformLand_Project/ProjectSettings/: InputManager.asset  QualitySettings.asset  TagManager.asset
09_BeyondtheSky_Project/ProjectSettings/: ProjectSettings.asset  TagManager.asset
0_FinTranslator/FinTranslator_code/: .gitignore  CMakeLists.txt  windeployqt.md
0_kkumigi_Project/: kkumigi.uproject
1. Omnibus/: .editorconfig  .ignore  Omnibus.uproject
1_Omnibus_Project/: .gitmodules  Omnibus.uproject  스프라이트-0001.aseprite
3. Montis/: Montis.uproject
4. CitadelForever/: .gitignore  README.md  포스트 프로세싱용 hlsl 코드.cpp
4_CitadelForever_Project/: CitadelForever.uproject
(+1899 files in other folders)
